--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
 
+
+header nav {
+
+display: inline-block;
+
+}
+
+ul {
+
+ display: inline-block;
+
+}
+
+#navigationBar
+{
+
+    display: inline-block;
+
+}
+
+
+
+
 /* latin-ext */
 @font-face {
     font-family: 'Abril Fatface';
